Reviewed by Mark Rowe.
        * config.ini: Correct blog name.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28306 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/ChangeLog
+++ b/PlanetWebKit/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-01  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Mark Rowe.
+
+        * config.ini: Correct blog name.
+
 2007-11-30  Adam Roben  <aroben@apple.com>
 
         Add another feed
