Reviewed by Tim
        Added a default database quota of 5mb to the default WebPreferences

        * WebView/WebPreferences.m:
        (+[WebPreferences initialize]):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28314 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/mac/ChangeLog
+++ b/WebKit/mac/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-01  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Tim
+
+        Added a default database quota of 5mb to the default WebPreferences
+
+        * WebView/WebPreferences.m:
+        (+[WebPreferences initialize]):
+
 2007-11-30  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Geoff Garen
