2007-12-01  Alp Toker  <alp@atoker.com>
        Reviewed by Adam Roben.

        Wrap type definitions in webkitdefines.h with G_BEGIN_DECLS, which
        takes care of extern "C".

        Introduce a webkit.h convenience header.

        Remove another left-over from the old API.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28316 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-01  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Adam Roben.
+
+        Add the newly introduced webkit.h convenience header.
+
+        * WebCore.pro:
+
 2007-12-01  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Adam.
