--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-02  Darin Adler  <darin@apple.com>
+
+        * Scripts/do-webcore-rename: More planned renaming.
+
 2007-12-02  Sam Weinig  <sam@webkit.org>
 
         Rubber stamped by Anders.
