--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-02  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: added an #include.
+
+        * kjs/collector.cpp:
+
+2007-12-02  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Eric Seidel.
 
         Second step in refactoring JSGlobalObject: moved virtual functions from
