--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-03  Geoffrey Garen  <ggaren@apple.com>
+
+        GTK Build fix: get globalExec from the right place.
+
+        * WebView/webkitwebframe.cpp:
+
 2007-12-01  Alp Toker  <alp@atoker.com>
 
         Reviewed by Adam Roben.
