Speculative Windows build fix
        * WebFrame.cpp:
        (WebFrame::globalContext):
        (WebFrame::windowObjectCleared):
        * WebScriptDebugger.cpp:
        (WebScriptDebugger::WebScriptDebugger):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28334 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,13 @@
+2007-12-03  Adam Roben  <aroben@apple.com>
+
+        Speculative Windows build fix
+
+        * WebFrame.cpp:
+        (WebFrame::globalContext):
+        (WebFrame::windowObjectCleared):
+        * WebScriptDebugger.cpp:
+        (WebScriptDebugger::WebScriptDebugger):
+
 2007-12-01  Sam Weinig  <sam@webkit.org>
 
         Rename IWebViewPrivate::selectionImageRect to IWebViewPrivate::selectionRect.
