2007-12-03  Alp Toker  <alp@atoker.com>
        Add another missing DEPENDPATH.

        Noticed when fixing the build.

        * WebCore.pro:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28336 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-03  Alp Toker  <alp@atoker.com>
+
+        globalObject() GTK+ build fix.
+
+        * WebCoreSupport/FrameLoaderClientGtk.cpp:
+        (WebKit::FrameLoaderClient::windowObjectCleared):
+
 2007-12-03  Geoffrey Garen  <ggaren@apple.com>
 
         GTK Build fix: get globalExec from the right place.
