--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-03  Alp Toker  <alp@atoker.com>
+
+        Add another missing DEPENDPATH.
+
+        Noticed when fixing the build.
+
+        * WebCore.pro:
+
 2007-12-03  Adam Roben  <aroben@apple.com>
 
         Speculative Windows build fix
