--- a/WebKit/wx/ChangeLog
+++ b/WebKit/wx/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-03  Mark Rowe  <mrowe@apple.com>
+
+        wx build fix.
+
+        * WebView.cpp:
+        (wxWebView::RunScript):
+
 2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
 
         wx build fix. Add WebCore/platform/graphics/wx to includes.
