2007-12-03  Mark Rowe  <mrowe@apple.com>
        Speculative Windows build fix.

        * WebScriptCallFrame.cpp:
        (WebScriptCallFrame::valueByEvaluatingJavaScriptFromString):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28340 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-03  Mark Rowe  <mrowe@apple.com>
+
+        Speculative Windows build fix.
+
+        * WebScriptCallFrame.cpp:
+        (WebScriptCallFrame::valueByEvaluatingJavaScriptFromString):
+
 2007-12-03  Adam Roben  <aroben@apple.com>
 
         Another speculative Windows build fix
