Reviewed by David.
Fixes: http://bugs.webkit.org/show_bug.cgi?id=15645
Don't allow selectors to interfere with the SVG shadow tree (<use> internal non-exposed tree).


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28357 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,16 @@
 2007-12-03  Nikolas Zimmermann  <zimmermann@kde.org>
 
+        Reviewed by David.
+
+        Add new testcase verifying that CSS selectors don't affect the non-exposed SVG shadow tree.
+
+        * platform/mac/svg/custom/use-css-no-effect-on-shadow-tree-expected.checksum: Added.
+        * platform/mac/svg/custom/use-css-no-effect-on-shadow-tree-expected.png: Added.
+        * platform/mac/svg/custom/use-css-no-effect-on-shadow-tree-expected.txt: Added.
+        * svg/custom/use-css-no-effect-on-shadow-tree.svg: Added.
+
+2007-12-03  Nikolas Zimmermann  <zimmermann@kde.org>
+
         Rubber stamped by Mark.
 
         Commit missing layout test results from my last commit (fix for bug 15403)
