Removing passing tests
        * platform/win/Skipped:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28361 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-03  Alice Liu  <alice.liu@apple.com>
+
+        Removing passing tests
+
+        * platform/win/Skipped:
+
 2007-12-03  Nikolas Zimmermann  <zimmermann@kde.org>
 
         Reviewed by David.
